crates/strider/tests/snapshots/ppc64le__calls__mid.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100103c0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v9" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "7" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v14" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "5" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "17" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="StackStore u64\n→ ram[sp - 112]", shape=box3d, fillcolor="#20182a"];
  "20" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="StackStore u64\n→ ram[sp + 16]", shape=box3d, fillcolor="#20182a"];
  "22" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "25" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
